package edu.quinnipiac.ser210.githubchat.database.dataobjects;

public class Repository {
    private String owner;
    private String name;
    private boolean isFavorite;
}
