package edu.quinnipiac.ser210.githubchat.github.async;

public class FetchGithubRepoListTask {}
