package edu.quinnipiac.ser210.githubchat.github.dataobjects;

public class GithubUser {}
