package edu.quinnipiac.ser210.githubchat.github.dataobjects;

public interface Linkable {}
