package edu.quinnipiac.ser210.githubchat.ui.async;

public class FetchImageTask {}
